@@ -1,5 +1,8 @@
 2011-09-26  Jason Merrill  <jason@redhat.com>
 
+	PR c++/46105
+	* g++.dg/template/partial12.C: New.
+
 	PR c++/50508
 	* g++.dg/cpp0x/constexpr-typedef1.C: New.
 
