@@ -1,5 +1,8 @@
 2011-09-26  Jason Merrill  <jason@redhat.com>
 
+	PR c++/46105
+	* typeck.c (structural_comptypes): Ignore cv-quals on typename scope.
+
 	PR c++/50508
 	* semantics.c (cxx_eval_logical_expression): Use tree_int_cst_equal
 	rather than ==.
